# pdf-translator

./: .gitignore  README.md  pdf_translator.py  pyproject.toml  requirements.txt
src/: core.py
src/utils/: formatting.py  io.py  language_map.py  transformation.py
